# esp_audio_pcm_toolkit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig.projbuild  README.md  README_CN.md  idf_component.yml
.github/workflows/: esp_upload_component.yml
examples/basic_example/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/basic_example/main/: CMakeLists.txt  Kconfig.projbuild  basic_example.c  board.c  board.h  idf_component.yml  net_init.c  net_init.h
include/: esp_audio_pcm.h
src/: esp_audio_pcm.c  esp_audio_pcm_ctrl.c  esp_audio_pcm_priv.h  esp_audio_pcm_tcp.c  esp_audio_pcm_uart.c  esp_audio_pcm_udp.c  esp_audio_pcm_usb.c
stitch_audio_pcm_monitor_dashboard/: DESIGN.md  code.html
tools/pcm_monitor/: README.md  list_ports.bat  list_ports.py  monitor.url  pcm_serial_bridge.py  pcm_serial_monitor.html  pcm_serial_monitor.py  serve.ps1  start_monitor.bat  start_monitor.sh  usb_pcm_capture.py
